# rebuild-pytorch-tensor-from-pointer

./: LICENSE  README.md  client.py  pyproject.toml  server.py
src/: client.py  core.py  server.py  settings.py
